noinst_LTLIBRARIES = libgtksourceview.la

AM_CPPFLAGS = $(MOO_CPPFLAGS)
AM_CFLAGS = $(MOO_CFLAGS)
AM_CXXFLAGS = $(MOO_CXXFLAGS)

libgtksourceview_la_SOURCES =		\
	gtksourcecontextengine.c	\
	gtksourcecontextengine.h	\
	gtksourceengine.c		\
	gtksourceengine.h		\
	gtksourceiter.c			\
	gtksourceiter.h			\
	gtksourcelanguage-parser-1.c	\
	gtksourcelanguage-parser-2.c	\
	gtksourcelanguage-private.h	\
	gtksourcelanguage.c		\
	gtksourcelanguage.h		\
	gtksourcelanguagemanager.c	\
	gtksourcelanguagemanager.h	\
	gtksourcestyle-private.h	\
	gtksourcestyle.c		\
	gtksourcestyle.h		\
	gtksourcestylescheme.c		\
	gtksourcestylescheme.h		\
	gtksourcestyleschememanager.c	\
	gtksourcestyleschememanager.h	\
	gtksourceview-utils.c		\
	gtksourceview-utils.h		\
	gtktextregion.c			\
	gtktextregion.h

libgtksourceview_la_SOURCES +=		\
	gtksourceview-i18n.h		\
	gtksourceview-marshal.h		\
	gtksourceview-api.h		\
	gtksourcebuffer.h		\
	gtksourceview.h

# -%- strip:true -%-
