AM_CPPFLAGS =				\
	-I..				\
	-I$(top_builddir)		\
	$(MOO_CFLAGS)			\
	$(MOO_DEBUG_CFLAGS)

noinst_LTLIBRARIES = libfoocanvas.la

libfoocanvas_la_LIBADD =		\
	$(RENDER_LIBS)

libfoocanvas_la_SOURCES =		\
	foo-canvas-line.h		\
	foo-canvas-pixbuf.h		\
	foo-canvas-polygon.h		\
	foo-canvas-rect-ellipse.h	\
	foo-canvas-text.h		\
	foo-canvas-util.h		\
	foo-canvas-widget.h		\
	foo-canvas.h			\
	foo-canvas-i18n.h		\
	foo-canvas-line.c		\
	foo-canvas-pixbuf.c		\
	foo-canvas-polygon.c		\
	foo-canvas-rect-ellipse.c	\
	foo-canvas-text.c		\
	foo-canvas-util.c		\
	foo-canvas-widget.c		\
	foo-canvas.c			\
	libfoocanvas.h			\
	libfoocanvastypes.c		\
	foo-canvas-marshal.h
